# traceroot

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  .style.yapf  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  INCIDENT_RESPONSE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_hierarchical_chunking.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: npx-prettier.yml  pre-commit.yml  test.yml
docker/public/: Dockerfile  README.md  start.sh
docker/public/compose/: README.md  docker-compose.yml
docs/: docs.json  index.mdx  quickstart.mdx
docs/examples/: healthcare_voice_agent.mdx  multi_code_agent.mdx
docs/sdk/: java.mdx  python.mdx  typescript.mdx
examples/distributed_services/multi_code_agent/: .env.example  README.md  __init__.py  main.py  requirements.txt  setup.sh  simple_server.py  start.sh  summarize_agent.py
examples/distributed_services/multi_code_agent/agents/: code_agent.py  plan_agent.py
examples/distributed_services/multi_code_agent/rest/: code_agent.py  execution_agent.py  main.py  plan_agent.py  simple_server.py
examples/distributed_services/multi_code_agent/ui/: README.md  next.config.ts  package-lock.json  package.json  traceroot.config.ts  tsconfig.json
examples/general/multi_code_agent/: README.md  code_agent.py  main.py  plan_agent.py  requirements.txt  simple_server.py  summarize_agent.py
examples/general/multi_code_agent/rest/: execution_agent.py  main.py  plan_agent.py  summarize_agent.py
examples/python/: .env.example  .traceroot-config.yaml  README.md  loop_example.py  override_example.py  simple_example.py
examples/typescript/: child-logger-example.ts  example-decorator.ts  example.ts  log-level-example.ts  package.json  simple-example-decorator.ts  simple-example-effect-ts.ts  simple-example-sync.ts  simple-example.ts  simple_example_loop.ts  traceroot.config.ts  tsconfig.json
rest/: README.md  app.py  constants.py  main.py  typing.py
rest/agent/: LICENSE  README.md  __init__.py  agent.py  chat.py  github_tools.py  typing.py
rest/agent/agent/: agent.py
rest/agent/chunk/: semantic.py  sequential.py
rest/agent/context/: tree.py
rest/agent/ee/: agent.py  github_tools.py
rest/agent/filter/: feature.py  structure.py
rest/agent/output/: chat_output.py  feature.py  structure.py
rest/agent/prompts/: __init__.py  agent_prompts.py  chat_prompts.py
rest/agent/summarizer/: chatbot_output.py  chunk.py  github.py  title.py
rest/agent/tools/: __init__.py  github_issue.py  tool.py
rest/agent/utils/: openai_tools.py
rest/client/: aws_client.py  github_client.py  jaeger_client.py  mongodb_client.py  sqlite_client.py
rest/config/: __init__.py  chat.py  code.py  integrate.py  log.py  rate_limit.py  rate_limit_advanced.py  stripe_config.py  subscription.py  trace.py  traces_and_logs.py
rest/dao/: mongodb_dao.py  sqlite_dao.py
rest/routers/: explore.py  integrate.py  internal.py  stripe_checkout.py  stripe_webhook.py  subscription.py  verify.py
rest/routers/auth/: config.py  router.py
rest/service/: aws_client.py  jaeger_client.py  provider.py  service_client.py  tencent_client.py
rest/service/log/: __init__.py  aws_log_client.py  jaeger_log_client.py  log_client.py  tencent_log_client.py
rest/service/trace/: __init__.py  aws_trace_client.py  jaeger_trace_client.py  tencent_trace_client.py  trace_client.py
rest/utils/: auth.py  constants.py  datetime.py  encryption.py  github.py  log.py  pagination.py  token_tracking.py  trace.py  traces_and_logs_tracking.py
scripts/release/: start_release.sh
test/: test_sqlite_client.py
test/agent/context/: test_tree.py
test/agent/utils/: test_openai_tools.py
test/client/: test_aws_client_filtering.py  test_sqlite_client.py
test/utils/: test_log.py
ui/: .gitignore  Makefile  README.md  next.config.ts  package-lock.json  package.json
ui/data/log/: log_0.json  log_1.json  log_10.json  log_11.json  log_12.json  log_13.json  log_14.json  log_15.json  log_2.json  log_3.json  log_4.json  log_5.json  log_6.json  log_7.json  log_8.json  log_9.json
ui/data/trace/: trace_0.json  trace_1.json  trace_10.json  trace_11.json  trace_12.json  trace_13.json  trace_14.json  trace_15.json  trace_2.json  trace_3.json  trace_4.json  trace_5.json  trace_6.json  trace_7.json  trace_8.json  trace_9.json
ui/src/: middleware.ts
ui/src/app/: authenticated-layout.tsx  globals.css  layout-client.tsx  layout.tsx  page.tsx
ui/src/app/agent/: page.tsx
ui/src/app/explore/: page.tsx
ui/src/app/integrate/: page.tsx
ui/src/app/login/: page.tsx
ui/src/app/pricing/: page.tsx
ui/src/app/settings/: page.tsx
ui/src/app/workflow/: page.tsx
ui/src/components/: theme-provider.tsx
ui/src/components/auth/: AuthGuard.tsx  SubscriptionGuard.tsx
ui/src/components/explore/: CustomTimeRangeDialog.tsx  GroupButton.tsx  RefreshButton.tsx  SearchBar.tsx  TimeButton.tsx  Trace.tsx
ui/src/components/integrate/: Item.tsx  RightPanel.tsx
ui/src/components/plot/: Scatter.tsx
ui/src/components/resizable/: ResizablePanel.tsx
ui/src/components/right-panel/: ModeToggle.tsx  RightPanelSwitch.tsx
ui/src/components/settings/: AccessLostWarning.tsx  AccountActionsCard.tsx  CloudProviderTabContent.tsx  CurrentPlanCard.tsx  LocalSettingsContainer.tsx  LogProviderTabContent.tsx  PaymentHistoryCard.tsx  SettingsContainer.tsx  SettingsSidebar.tsx  TokenUsageCard.tsx  TraceProviderTabContent.tsx  TracesLogsCard.tsx
ui/src/components/side-bar/: Line.tsx  (+6 more)
ui/src/config/: stripe.ts
ui/src/constants/: animations.ts  colors.ts  model.ts  version.ts
ui/src/hooks/: useCloudProvider.ts  useStableCustomer.ts  useSubscription.ts  useUser.ts  useUserSubscription.ts
ui/src/lib/: clerk-auth.ts  mongodb.ts  server-auth-headers.ts  utils.ts
ui/src/models/: chat.ts  code.ts  integrate.ts  log.ts  provider.ts  token.ts  trace.ts
ui/src/types/: integration.ts  subscription.ts
ui/src/utils/: encryption.ts  provider.ts  streamingParser.ts  stripe-config.ts  stripe.ts  timezone.ts  uuid.ts
(+66 files in other folders)
