[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceroot-framework"
version = "0.1.1"
description = "TraceRoot - Comprehensive AI-powered tracing, monitoring and REST API solution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zecheng Zhang"},
    {name = "Xinwei He"},
]
keywords = [
    "opentelemetry",
    "agents",
    "dev",
    "del-tools",
    "artificial-intelligence",
    "tracing",
    "logging",
    "debugging",
    "rest-api",
    "multi-agent-systems",
    "coding",
    "debugging-assistant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "pyjwt==2.10.1",
    "cryptography==45.0.5",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "requests==2.32.4",
    "openai==1.99.2",
    "pymongo==4.13.2",
    "boto3==1.39.11",
    "numpy==2.2.0",
    "asgiref==3.9.1",
    "slowapi==0.1.9",
    "aiocache==0.12.3",
    "PyGithub==2.6.1",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "pydantic-settings==2.10.1",
    "dotenv==0.9.9",
    "traceroot==0.0.5a2",
    "aiosqlite==0.21.0",
    "stripe==12.3.0",
    "docstring_parser==0.17.0",
    "autumn-py==2.2.2",
    "aiohttp==3.12.15",
    "tencentcloud-sdk-python==3.0.1470",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "black==25.1.0",
    "flake8==7.3.0",
    "ruff==0.12.4",
    "mypy==1.17.0",
    "pre-commit==4.2.0",
]

all = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "pyjwt==2.10.1",
    "cryptography==45.0.5",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "requests==2.32.4",
    "openai==1.99.2",
    "pymongo==4.13.2",
    "boto3==1.39.11",
    "numpy==2.2.0",
    "asgiref==3.9.1",
    "slowapi==0.1.9",
    "aiocache==0.12.3",
    "PyGithub==2.6.1",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "pydantic-settings==2.10.1",
    "dotenv==0.9.9",
    "traceroot==0.0.5a2",
    "aiosqlite==0.21.0",
    "stripe==12.3.0",
    "docstring_parser==0.17.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "black==25.1.0",
    "flake8==7.3.0",
    "ruff==0.12.4",
    "mypy==1.17.0",
    "pre-commit==4.2.0",
    "aiohttp==3.12.15",
    "tencentcloud-sdk-python==3.0.1470",
]

[project.urls]
Homepage = "https://github.com/traceroot-ai/traceroot"
Documentation = "https://github.com/traceroot-ai/traceroot#readme"
Repository = "https://github.com/traceroot-ai/traceroot"
"Bug Reports" = "https://github.com/traceroot-ai/traceroot/issues"

[project.scripts]
traceroot-api = "rest.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rest*", "test*", "ui*"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
known_third_party = ["traceroot"]

[tool.flake8]
max-line-length = 90

[tool.pytest.ini_options]
asyncio_mode = "auto"
